# physical-ai-humanoid-robotic-book

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  LICENSE  README.md  WEEKLY_MAPPING.md  docker-compose.yml  docusaurus.config.js  global.d.ts  ingest_book.py  jest.config.js  lighthouserc.json  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  sidebars.js  test_auth_fix.py  test_openrouter_integration.py  test_openrouter_simple.py  tmpclaude-318e-cwd  tsconfig.json  verify_requirements.py
.claude/: settings.local.json
.github/workflows/: lighthouse-ci.yml  link-checker.yml  tests.yml
.specify/memory/: constitution.md
agents/ai_agent/: AGENT.md
agents/humanoid_capstone_agent/: AGENT.md
agents/sim_agent/: AGENT.md
backend/: .env.example  init_db.py  main.py  requirements.txt  run_tests.py  space.yml  test_connections.py  test_dependencies.py  test_openrouter_config.py  tmpclaude-6bd7-cwd
backend/src/: __init__.py  better_auth_mock.py  config.py
backup/: sitemap.xml
docs/: _mdx-template.mdx  intro.md
docs/00-introduction/: INTRODUCTION.md
docs/appendix/: cloud-gpu-setup.mdx  contributing.mdx  hardware-alternatives.mdx  troubleshooting.mdx
docs/module-04-vision-language-action/: _category_.json
docs/module-05-integrated-rag-chatbot/: api-usage.md  architecture.md  intro.md
scripts/: .env.example  extract_book_content.py  optimize-images.sh
scripts/retrieval/: __init__.py  retrieve.py
skills/edge_deploy/: SKILL.md  usage.md
skills/gazebo_sim/: SKILL.md  usage.md
skills/hardware_proxy/: SKILL.md  usage.md
skills/isaac_sim_pipeline/: SKILL.md  usage.md
skills/ros2_core/: SKILL.md  usage.md
skills/unity_vis/: SKILL.md  usage.md
skills/urdf_designer/: SKILL.md  usage.md
skills/vla_controller/: SKILL.md  usage.md
specs/001-gazebo-to-unity-data-flow/: spec.md
specs/001-gazebo-unity-integration/: spec.md
specs/001-humanoid-navigation-simulation/: spec.md
specs/001-integrated-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-isaac-ros-integration/: spec.md
specs/001-isaac-sdk-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-isaac-sim-introduction/: spec.md
specs/001-physical-ai-humanoid/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-retrieval-module/: spec.md  tasks.md
specs/001-vla-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-complete-retrieval-pipeline/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rag-agent-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-frontend-chat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-auth-user-profile/: api_endpoints.md  better_auth_integration.md  database_schema.md  plan.md  spec.md  tasks.md  user_schema.md
specs/007-chapter-personalization/: plan.md  spec.md  tasks.md
src/css/: auth.css  (+2 more)
(+366 files in other folders)
